--- a/student form/index.html
+++ b/student form/index.html
@@ -18,7 +18,7 @@
 
     <title>Enrollment Form</title>
     <link rel="stylesheet" href="css/style.css" />
-    /* media query only active if the width is between 0 to 1000px */
+    <!-- media query only active if the width is between 0 to 1000px -->
     <link
       rel="stylesheet"
       media="screen and (max-width : 1000px)"
